.archive/kubernetes/main/apps/networking/ingresses/ingressRoutes/paperless/ingress-traefikCRD.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.${SECRET_DOMAIN}`)
      middlewares:
        - name: headers
          namespace: networking
        - name: authelia
          namespace: networking
      services:
        - name: paperless
          port: 8000
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
